# anki-study-telegram-reporter

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: daily-report.yml
docs/specs/anki-telegram-bot/: design.md  requirements.md  tasks.md
src/anki_study_telegram_reporter/: ankiweb.py  cli.py  collection.py  config.py  copy_bank.py  logging.py  metrics.py  renderer.py  sources.py  state.py
src/anki_telegram/: __init__.py  ankiweb.py  cli.py  collection.py  config.py  copy_bank.py  metrics.py  renderer.py  retry.py  sources.py  telegram.py
tests/: test_ankiweb.py  test_cli.py  test_cli_send.py  test_collection.py  test_config.py  test_logging.py  test_package.py  test_renderer.py  test_retry.py  test_state.py  test_telegram.py
