[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-study-telegram-reporter"
version = "0.1.0"
description = "Daily Anki study progress reports delivered to Telegram groups."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Denny Huang" }
]
dependencies = [
    "anki==25.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
anki-study-telegram-reporter = "anki_study_telegram_reporter.cli:main"
anki-telegram = "anki_study_telegram_reporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
